# push_swap

./: .gitignore  CMakeLists.txt  Makefile  author  test  test_rules
checker/: a.out  check_result.c  checker.h  do_rules.c  do_rules_checker.c  ft_ll_atoi.c  ft_stack.c  ft_stack.h  go_exit.c  main.c  main_checker.c  perform_rules.c  read_n_execute.c  stack.c  stack.h
checker/libft/: ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isascii.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_lstadd.c  ft_lstmap.c  ft_lstnew.c  ft_lstpush.c  ft_memccpy.c  ft_memmove.c  ft_putendl.c  ft_putendl_fd.c  ft_putstr.c  ft_strcat.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_strlcat.c  ft_strmap.c  ft_strmapi.c  ft_strncmp.c  ft_strncpy.c  ft_strnew.c  ft_strrchr.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  ft_tolower.c  ft_toupper.c  get_next_line.c  libft.h
checker_dir/: main_checker.c  perform_rules.c  read_n_execute.c
includes/: checker.h  ft_stack.h  push_swap.h
libft/: Makefile  ft_fib.c  ft_is_complex_string.c  ft_isalpha.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_lstcirc_add.c  ft_lstcirc_delelem.c  ft_lstcirc_findcontent_size.c  ft_lstcirc_strnew.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_memalloc.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memset.c  ft_pow.c  ft_putchar.c  ft_putchar_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_sqrt.c  ft_sstrchr.c  ft_strchr.c  ft_strdel.c  ft_striteri.c  ft_strjoin.c  ft_strjoinre.c  ft_strlcpy.c  ft_strlen.c  ft_strncat.c  ft_strndup.c  ft_strnequ.c  ft_strnstr.c  ft_strsplit.c  (+3 more)
push_swap/: basic_3_algorithms.c  basic_triples_algorithms.c  basic_triples_algorithms_b.c  choose_triple.c  do_rules_ps.c  find_min_max_median.c  find_min_max_thirds.c  funcs_sort_in_3_groups.c  indexing_list.c  main_push_swap.c  push_swap.h  second_triples_algorithms_b.c  sort_in_three_groups.c  sort_triples.c  sort_triples_choose_rules.c  sorter.c  third_triple_algorithms.c  triple_a_bottom_algorithms.c  triple_a_top_algorithms.c  triple_b_basic_algorithms.c  triple_b_bottom_algorithms.c  triple_b_top_algorithms.c  triple_basic_algorithms.c  triple_first_algorithms_b.c  triple_second_algorithms_b.c  triple_third_algorithms.c
push_swap_dir/: do_rules_ps.c  main_push_swap.c  sort_in_three_groups.c  sort_triples_choose_rules.c  sorter.c  triple_a_bottom_algorithms.c  triple_a_top_algorithms.c  triple_basic_algorithms.c
stack/: ascending_descending.c  checking.c  ft_ll_atoi.c  ft_stack.c  go_exit.c  push_swap_ll_atoi.c
