cmake_minimum_required(VERSION 3.15)
project(push_swap_dir C)

set(CMAKE_C_STANDARD 11)

include_directories(checker_dir)
include_directories(ft_printf/includes)
include_directories(ft_printf/libft)
include_directories(libft)
include_directories(push_swap_dir)

add_executable(push_swap_dir
        checker_dir/check_result.c
        includes/checker.h
        checker_dir/do_rules_checker.c
        stack/push_swap_ll_atoi.c
        stack/ft_stack.c
        includes/ft_stack.h
        stack/go_exit.c
        checker_dir/perform_rules.c
        checker_dir/read_n_execute.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_fib.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_islower.c
        libft/ft_isprint.c
        libft/ft_isspace.c
        libft/ft_isupper.c
        libft/ft_itoa.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_lstpush.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_pow.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_sqrt.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_lstcirc_add.c
        libft/ft_lstcirc_delelem.c
        libft/ft_lstcirc_findcontent_size.c
        libft/ft_strjoinre.c
        libft/ft_strndup.c
        libft/ft_lstcirc_strnew.c
        libft/ft_strlcpy.c
        libft/ft_sstrchr.c
        libft/libft.h
        libft/get_next_line.c
        libft/get_next_line.h
        push_swap_dir/do_rules_ps.c
        push_swap_dir/find_min_max_thirds.c
        push_swap_dir/indexing_list.c
        includes/push_swap.h
        push_swap_dir/sort_in_three_groups.c
        push_swap_dir/sort_triples.c
        push_swap_dir/sort_triples_choose_rules.c
        push_swap_dir/sorter.c
        push_swap_dir/triple_a_bottom_algorithms.c
        push_swap_dir/triple_a_top_algorithms.c
        push_swap_dir/triple_b_bottom_algorithms.c
        push_swap_dir/triple_b_top_algorithms.c
        push_swap_dir/triple_basic_algorithms.c
        checker_dir/main_checker.c
        stack/checking.c libft/ft_is_complex_string.c)
